--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -45,7 +45,7 @@ jobs:
     needs: build
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
     steps:
     - uses: actions/checkout@v2
 
