(Comments and cosmetics)

--- a/tox.ini
+++ b/tox.ini
@@ -16,8 +16,7 @@ python =
 commands = pytest {posargs}
 deps =
     pytest-mypy-plugins >= 1.9.2
-    mypy >= 0.941
-    types-beautifulsoup4
+    {[testenv:mypy]deps}
 
 [testenv:format]
 deps =
