--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ['pdm-pep517 >= 0.12']
 build-backend = 'pdm.pep517.api'
 
 [project]
-name = 'lxml-stubs'
+name = 'types-lxml'
 dynamic = ['version']
 description = 'Type annotations for lxml'
 readme = 'README.md'
@@ -33,8 +33,8 @@ classifiers = [
 ]
 
 [project.urls]
-homepage = 'https://github.com/abelcheung/lxml-stubs'
-repository = 'https://github.com/abelcheung/lxml-stubs'
+homepage = 'https://github.com/abelcheung/types-lxml'
+repository = 'https://github.com/abelcheung/types-lxml'
 
 [tool.pdm]
 version = {use_scm = true}
