--- a/test-data/test-sax.yml
+++ b/test-data/test-sax.yml
@@ -2,25 +2,40 @@
   main: |
     from lxml.sax import ElementTreeContentHandler
     h = ElementTreeContentHandler()
-    reveal_type(h)  # N: Revealed type is "lxml.sax.ElementTreeContentHandler"
+    reveal_type(h)  # N: Revealed type is "lxml.sax.ElementTreeContentHandler[lxml.etree._Element]"
+    reveal_type(h.etree)  # N: Revealed type is "lxml.etree._ElementTree[lxml.etree._Element*]"
 
-- case: handler_property
+- case: handler_property_readonly
   main: |
     from lxml.sax import ElementTreeContentHandler
-    h: ElementTreeContentHandler
-    reveal_type(h.etree)  # N: Revealed type is "lxml.etree._ElementTree"
+    from lxml.etree import _Element
+    h: ElementTreeContentHandler[_Element]
     h.etree = h.etree # E: Property "etree" defined in "ElementTreeContentHandler" is read-only
 
 - case: handler_constructor_goodargs
   parametrized:
     - args: None
+      handler_sub: "lxml.etree._Element"
+      et_sub     : "lxml.etree._Element*"
     - args: makeelement=None
-    - args: html_parser.makeelement
+      handler_sub: "lxml.etree._Element"
+      et_sub     : "lxml.etree._Element*"
+    - args: html.html_parser.makeelement
+      handler_sub: "lxml.html.HtmlElement*"
+      et_sub     : "lxml.html.HtmlElement*"
+    - args: html.xhtml_parser.makeelement
+      handler_sub: "lxml.html.HtmlElement*"
+      et_sub     : "lxml.html.HtmlElement*"
+    - args: p.makeelement
+      handler_sub: "lxml.etree._Element*"
+      et_sub     : "lxml.etree._Element*"
   main: |
-    from lxml.sax import ElementTreeContentHandler as Handler
-    from lxml.html import html_parser
-    h = Handler({{ args }})
-    reveal_type(h)  # N: Revealed type is "lxml.sax.ElementTreeContentHandler"
+    from lxml.sax import ElementTreeContentHandler
+    from lxml import etree, html
+    p = etree.XMLParser()
+    h = ElementTreeContentHandler({{ args }})
+    reveal_type(h)  # N: Revealed type is "lxml.sax.ElementTreeContentHandler[{{ handler_sub }}]"
+    reveal_type(h.etree)  # N: Revealed type is "lxml.etree._ElementTree[{{ et_sub }}]"
 
 - case: handler_constructor_badargs
   expect_fail: true
@@ -28,10 +43,10 @@
     - args: 1
     - args: p.makeelement, None
   main: |
-    from lxml.sax import ElementTreeContentHandler as Handler
+    from lxml.sax import ElementTreeContentHandler
     from lxml.etree import XMLParser, _Element
     p: XMLparser[_Element]
-    h = Handler({{ args }})
+    h = ElementTreeContentHandler({{ args }})
 
 - case: producer_constructor_goodargs
   parametrized:
@@ -40,11 +55,12 @@
     - args: el, content_handler=ch
     - args: element_or_tree=et, content_handler=ch
   main: |
+    from typing import Any
     from lxml.sax import ElementTreeProducer as Producer
     from xml.sax.handler import ContentHandler
     from lxml.etree import _Element, _ElementTree
     ch: ContentHandler
-    et: _ElementTree
+    et: _ElementTree[Any]
     el: _Element
     p = Producer({{ args }})
     reveal_type(p)  # N: Revealed type is "lxml.sax.ElementTreeProducer"
@@ -58,21 +74,23 @@
     - args: 1, ch
     - args: el, 1
   main: |
+    from typing import Any
     from lxml.sax import ElementTreeProducer as Producer
     from xml.sax.handler import ContentHandler
     from lxml.etree import _Element, _ElementTree
     ch: ContentHandler
-    et: _ElementTree
+    et: _ElementTree[Any]
     el: _Element
     p = Producer({{ args }})
 
 - case: producer_saxify
   main: |
+    from typing import Any
     from lxml.sax import ElementTreeProducer as Producer
     from xml.sax.handler import ContentHandler
     from lxml.etree import _Element, _ElementTree
     ch: ContentHandler
-    et: _ElementTree
+    et: _ElementTree[Any]
     el: _Element
     p = Producer(el, ch)
     _ = p.saxify()  # E: "saxify" of "ElementTreeProducer" does not return a value
@@ -85,12 +103,13 @@
     - args: el, content_handler=ch
     - args: element_or_tree=et, content_handler=ch
   main: |
+    from typing import Any
     from xml.sax.handler import ContentHandler
     from lxml.sax import saxify
     from lxml.etree import _Element, _ElementTree
     class MyHandler(ContentHandler): ...
     ch: MyHandler
-    et: _ElementTree
+    et: _ElementTree[Any]
     el: _Element
     _ = saxify({{ args }})  # E: "saxify" does not return a value
 
@@ -103,11 +122,12 @@
     - args: 1, ch
     - args: el, 1
   main: |
+    from typing import Any
     from xml.sax.handler import ContentHandler
     from lxml.sax import saxify
     from lxml.etree import _Element, _ElementTree
     class MyHandler(ContentHandler): ...
     ch: MyHandler
-    et: _ElementTree
+    et: _ElementTree[Any]
     el: _Element
     saxify({{ args }})
