--- a/test-data/test-soupparser.yml
+++ b/test-data/test-soupparser.yml
@@ -26,7 +26,7 @@
     fileio = open('file', 'r')
     filename: str
     result = parse({{ args }})
-    reveal_type(result)  # N: Revealed type is "lxml.etree._ElementTree"
+    reveal_type(result)  # N: Revealed type is "lxml.etree._ElementTree[lxml.html.HtmlElement]"
 
 - case: convert_tree
   main: |
