More complete xpath tests

--- a/test-data/test-etree-element.yml
+++ b/test-data/test-etree-element.yml
@@ -565,3 +565,46 @@
     from lxml import etree
     elem: etree._Element
     _ = elem.{{ method }}('junk')  # E: Too many arguments for "{{ method }}" of "_Element"
+
+- case: xpath
+  parametrized:
+    - kwds: namespaces=None
+    - kwds: namespaces=ns
+    - kwds: extensions=None
+    - kwds: extensions=ext2
+    - kwds: smart_string=True
+    - kwds: var=1
+    - kwds: "namespaces=ns, extensions=ext1, smart_string=False"
+  main: |
+    from lxml import etree
+    root: etree._Element
+    xpath_expr: str
+    s: str
+    ns = {s: s}
+    def extfunc1(context, a) -> str: ...
+    def extfunc2(context, a, b) -> int: ...
+    ext1 = [{(None, s): extfunc1}]
+    ext2 = {(s, s): extfunc2}
+    result = root.xpath(xpath_expr, {{ kwds }})
+
+- case: xpath_noarg
+  main: |
+    from lxml import etree
+    root: etree._Element
+    root.xpath()  # E: Too few arguments for "xpath" of "_Element"
+
+- case: xpath_badarg
+  expect_fail: true
+  parametrized:
+    - args: path=expr
+    - args: "expr, namespaces=badns"
+    - args: "expr, extensions=badext"
+  main: |
+    from lxml import etree
+    root: etree._Element
+    expr: str
+    s: str
+    badns = {s: 1}
+    def extfunc1(context, a) -> str: ...
+    badext = [{badns: extfunc1}]
+    root.xpath({{ args }})
