--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,11 @@ python =
     3.9: py39
     3.10: py310
 
+[common_dep]
+deps =
+    types-beautifulsoup4
+    types-html5lib
+
 [testenv]
 commands = pytest {posargs}
 deps =
@@ -29,7 +34,7 @@ commands =
 [testenv:mypy]
 deps =
     mypy >= 0.941
-    types-beautifulsoup4
+    {[common_dep]deps}
 skip_install = true
 commands =
     mypy --show-error-codes --show-error-context --pretty lxml-stubs
@@ -37,7 +42,7 @@ commands =
 [testenv:pyright]
 deps =
     pyright
-    types-beautifulsoup4
+    {[common_dep]deps}
 skip_install = true
 commands =
     pyright lxml-stubs
